--- a/app/assets/stylesheets/lcms/engine/print/_cg-base.scss
+++ b/app/assets/stylesheets/lcms/engine/print/_cg-base.scss
@@ -1,4 +1,4 @@
 @import
-  'print/cg/base-typography',
-  'print/cg/breaks',
-  'print/cg/elements-typography';
+  'cg/base-typography',
+  'cg/breaks',
+  'cg/elements-typography';
