--- a/app/assets/stylesheets/lcms/engine/print/_gdoc-base.scss
+++ b/app/assets/stylesheets/lcms/engine/print/_gdoc-base.scss
@@ -35,12 +35,12 @@
   'gdoc/material/header';
 
 @import
-  'print/lesson/def',
-  'print/lesson/expand',
-  //'print/lesson/image',
-  'print/lesson/pd',
-  'print/lesson/pv';
+  'lesson/def',
+  'lesson/expand',
+  //'lesson/image',
+  'lesson/pd',
+  'lesson/pv';
 
 @import
-  'print/material/header',
-  'print/material/list';
+  'material/header',
+  'material/list';
