--- a/app/assets/stylesheets/lcms/engine/print/_lesson-base.scss
+++ b/app/assets/stylesheets/lcms/engine/print/_lesson-base.scss
@@ -2,17 +2,17 @@
   @include ld-custom-styles;
 
   @import
-    'print/lesson/base-typography',
-    'print/lesson/callout',
-    'print/lesson/def',
-    'print/lesson/expand',
-    'print/lesson/group',
-    'print/lesson/image',
-    'print/lesson/materials',
-    'print/lesson/optbreak',
-    'print/lesson/pd',
-    'print/lesson/pv',
-    'print/lesson/section',
-    'print/lesson/smp',
-    'print/lesson/title';
+    'lesson/base-typography',
+    'lesson/callout',
+    'lesson/def',
+    'lesson/expand',
+    'lesson/group',
+    'lesson/image',
+    'lesson/materials',
+    'lesson/optbreak',
+    'lesson/pd',
+    'lesson/pv',
+    'lesson/section',
+    'lesson/smp',
+    'lesson/title';
 }
