--- a/app/views/lcms/engine/shared/_favicon.html.erb
+++ b/app/views/lcms/engine/shared/_favicon.html.erb
@@ -1,6 +1,6 @@
-<%= favicon_link_tag 'favicon/favicon.ico', rel: 'shortcut icon', type: 'image/x-icon' %>
-<%= favicon_link_tag base64_encoded_asset('favicon/favicon-16x16.png'), rel: 'icon', type: 'image/png', sizes: '16x16' %>
-<%= favicon_link_tag base64_encoded_asset('favicon/favicon-32x32.png'), rel: 'icon', type: 'image/png', sizes: '32x32' %>
-<%= favicon_link_tag base64_encoded_asset('favicon/favicon-96x96.png'), rel: 'icon', type: 'image/png', sizes: '96x96' %>
-<%= favicon_link_tag base64_encoded_asset('favicon/favicon-128x128.png'), rel: 'icon', type: 'image/png', sizes: '128x128' %>
-<%= favicon_link_tag base64_encoded_asset('favicon/favicon-196x196.png'), rel: 'icon', type: 'image/png', sizes: '196x196' %>
+<%= favicon_link_tag 'lcms/engine/favicon/favicon.ico', rel: 'shortcut icon', type: 'image/x-icon' %>
+<%= favicon_link_tag base64_encoded_asset('lcms/engine/favicon/favicon-16x16.png'), rel: 'icon', type: 'image/png', sizes: '16x16' %>
+<%= favicon_link_tag base64_encoded_asset('lcms/engine/favicon/favicon-32x32.png'), rel: 'icon', type: 'image/png', sizes: '32x32' %>
+<%= favicon_link_tag base64_encoded_asset('lcms/engine/favicon/favicon-96x96.png'), rel: 'icon', type: 'image/png', sizes: '96x96' %>
+<%= favicon_link_tag base64_encoded_asset('lcms/engine/favicon/favicon-128x128.png'), rel: 'icon', type: 'image/png', sizes: '128x128' %>
+<%= favicon_link_tag base64_encoded_asset('lcms/engine/favicon/favicon-196x196.png'), rel: 'icon', type: 'image/png', sizes: '196x196' %>
