Extract feature specs

--- a/app/views/lcms/engine/admin/pages/index.html.erb
+++ b/app/views/lcms/engine/admin/pages/index.html.erb
@@ -8,7 +8,7 @@
   <table class=table>
     <tr>
       <th>ID
-      <th><%= Page.human_attribute_name :title %>
+      <th><%= Lcms::Engine::Page.human_attribute_name :title %>
       <th><%= t('ui.actions') %>
     </tr>
 
