--- a/app/assets/stylesheets/lcms/engine/base/_colors.scss
+++ b/app/assets/stylesheets/lcms/engine/base/_colors.scss
@@ -70,12 +70,12 @@ $ub-green: (
 );
 
 $ub-buttons: (
-  #ff0: #ffbf00,
-  #008000: #97c40f,
-  #ffa500: #f96924,
-  #808080: #959595,
+  yellow: #ffbf00,
+  green: #97c40f,
+  orange: #f96924,
+  gray: #959595,
   base: $ub-panel-bg,
-  #fff: $ub-white,
+  white: $ub-white,
   ela: #f75b28,
   math: #00a699,
   lead: #a269bf,
