--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -16,7 +16,7 @@
       <% end %>
 
       <div class="u-margin-bottom--xlarge u-margin-top--xlarge">
-        <%= link_to 'Back to Login', new_user_session_path %>
+        <%= link_to 'Back to Login', lcms_engine.new_user_session_path %>
       </div>
     </div>
   </div>
