--- a/app/views/lcms/engine/admin/documents/_search_form.html.erb
+++ b/app/views/lcms/engine/admin/documents/_search_form.html.erb
@@ -18,7 +18,7 @@
                           required: false,
                           as: :select,
                           include_blank: true,
-                          collection: Grades::GRADES,
+                          collection: Lcms::Engine::Grades::GRADES,
                           label_method: :humanize %>
     </div>
 
