--- a/app/views/lcms/engine/pages/not_found.html.erb
+++ b/app/views/lcms/engine/pages/not_found.html.erb
@@ -1,4 +1,4 @@
-<% set_page_title t('pages.not_found.page_title') %>
+<% set_page_title t('lcms.engine.pages.not_found.page_title') %>
 
 <div class="o-filterbar-title">
   <h2><%= t('pages.not_found.page_header') %></h2>
