Foundation upgrade: clean&update CSS classes

--- a/app/views/lcms/engine/admin/users/index.html.erb
+++ b/app/views/lcms/engine/admin/users/index.html.erb
@@ -7,7 +7,7 @@
 
   <div class="row">
     <div class="flex-pull-right">
-      <%= link_to t('.new_user'), :new_admin_user, class: 'button primary' %>
+      <%= link_to t('.new_user'), :new_admin_user, class: 'button success' %>
     </div>
     <table class="table">
       <tr>
