--- a/app/views/lcms/engine/pages/not_found.html.erb
+++ b/app/views/lcms/engine/pages/not_found.html.erb
@@ -1,7 +1,7 @@
 <% set_page_title t('lcms.engine.pages.not_found.page_title') %>
 
 <div class="o-filterbar-title">
-  <h2><%= t('pages.not_found.page_header') %></h2>
+  <h2><%= t('lcms.engine.pages.not_found.page_header') %></h2>
 
   <div class="o-filterbar-title__subheader">
     You can try the <strong><%= link_to 'Search page', search_path %></strong>
