--- a/app/views/lcms/engine/admin/materials/index.html.erb
+++ b/app/views/lcms/engine/admin/materials/index.html.erb
@@ -49,11 +49,11 @@
         </tr>
 
         <% @materials.each do |material| %>
-          <% material = Lcms::Engine::MaterialPresenter.new material %>
+          <% material = ::Lcms::Engine::DocumentGenerator.material_presenter.new material %>
           <tr id="material_<%= material.id %>">
             <td><%= check_box_tag 'selected_ids[]', material.id, selected_id?(material.id), class: 'c-selected-ids' %></td>
             <td><%= material.id %>
-            <td class="u-text--right"><%= link_to material.metadata['identifier'], material_path(material, request.query_parameters), target: '_blank' %>
+            <td class="u-text--right"><%= link_to material.metadata['identifier'], ::Lcms::Engine::Admin::AdminController.material_path(material, request.query_parameters), target: '_blank' %>
             <td><%= link_to material.name, material.file_url, target: '_blank' %>
             <td><%= material.metadata['type'] %>
             <td><%= material.metadata['title']  %>
@@ -68,7 +68,7 @@
             <td>
               <ul class="materials-table__lessons">
                 <% material.documents.each do |lesson| %>
-                  <% lesson = Lcms::Engine::DocumentPresenter.new lesson %>
+                  <% lesson = ::Lcms::Engine::DocumentGenerator.document_presenter.new lesson %>
                   <li class="u-text--small">
                     <a href="<%= lesson.file_url%>" target="_blank" class="materials-table__lessons--file"><i class="ub-icon ub-file-gdoc"></i></a>
                     <%= link_to lesson.title, lesson, target: '_blank' %>
@@ -80,7 +80,7 @@
               <%= render partial: 'lcms/engine/admin/materials/reimport', locals: { material: material } %>
               <%= button_to t('ui.delete'), admin_material_path(material, query: params[:query]), class: 'button small alert', data: { confirm: t('ui.are_you_sure') }, form_class: 'inline', method: :delete %>
               <% unless material.pdf? %>
-                <%= link_to material.pdf_preview_title, preview_pdf_material_path(material), class: 'button warning', target: '_blank' %>
+                <%# link_to material.pdf_preview_title, preview_pdf_material_path(material), class: 'button warning', target: '_blank' %>
                 <%# link_to material.gdoc_preview_title, preview_gdoc_material_path(material), class: 'button warning', target: '_blank' %>
               <% end %>
           </tr>
