Allows create resources of type `subject` with lesson import
Also, wraps calls to `Lcms::Engine::Resource::HIERARCHY` to the method be allow altering the hierarchy from inside the host application.

--- a/app/views/lcms/engine/admin/resources/_fields.html.erb
+++ b/app/views/lcms/engine/admin/resources/_fields.html.erb
@@ -10,7 +10,7 @@
 
 <%= f.input :tree, label: 'Belongs to Curriculum Tree?', as: :boolean %>
 
-<%= f.input :curriculum_type, as: :select, collection: Lcms::Engine::Resource::HIERARCHY %>
+<%= f.input :curriculum_type, as: :select, collection: Lcms::Engine::Resource.hierarchy %>
 
 <%= f.input :opr_description, label: t('lcms.engine.admin.resources.form.opr_description'), wrapper_html: {class: (resource.unit? ? '': 'c-hidden')} %>
 
