--- a/app/views/lcms/engine/admin/materials/import.html.erb
+++ b/app/views/lcms/engine/admin/materials/import.html.erb
@@ -7,5 +7,5 @@
     <%= link_to '<- Back', admin_materials_path, class: 'button primary' %>
   </div>
 
-  <%= react_component('ImportStatus', @props) %>
+  <%= react_component('admin/ImportStatus', @props) %>
 </div>
