--- a/app/views/lcms/engine/admin/documents/index.html.erb
+++ b/app/views/lcms/engine/admin/documents/index.html.erb
@@ -13,12 +13,12 @@
     </div>
     <div class='flex-pull-right'>
 
-      <%= react_component 'MultiSelectedOperation', {
+      <%= react_component 'admin/MultiSelectedOperation', {
             text: t('.reimport_selected'),
             operation: 'reimport',
             path: reimport_selected_admin_documents_path(query: params[:query]),
             btn_style: 'primary' } %>
-      <%= react_component 'MultiSelectedOperation', {
+      <%= react_component 'admin/MultiSelectedOperation', {
             text: t('.delete_selected'),
             operation: 'delete',
             path: delete_selected_admin_documents_path(query: params[:query]),
