Rebase to the latest HEAD amd minor fixes

--- a/app/assets/stylesheets/lcms/engine/application.scss
+++ b/app/assets/stylesheets/lcms/engine/application.scss
@@ -16,8 +16,8 @@
   'font-awesome-sprockets',
   'font-awesome',
   'vendors/foundation_and_overrides',
-  'vendors/mathjax',
-  'vendors/swiper';
+  'vendors/mathjax.css',
+  'vendors/swiper.css';
 
 @import
   'utils/styles_override',
