Fix a couple of asset compilation issues

--- a/app/assets/stylesheets/lcms/engine/application.scss
+++ b/app/assets/stylesheets/lcms/engine/application.scss
@@ -61,7 +61,8 @@
   'components/sidebar',
   'components/simple-tab',
   'components/social-sharing',
-  'components/support/*',
+  'components/support/helpdesk',
+  'components/support/survey',
   'components/titles',
   'components/top-scroll-button',
   'components/unit-bundles';
