Tune up webpacker
Introduce new `lcms_engine_javascript_pack_tag` method to be used to include(and compile) lcms-engine based packs.

This is a solution to be able to isolate project specific packs and packs created inside the gem.

As an alternative we could use the solution provided here - https://github.com/rails/webpacker/issues/348#issuecomment-635480949

This looks more reliable to me.

- Update Dockerfile to set explicitly locale.
- Update gems to the latest versions

--- a/app/views/layouts/lcms/engine/admin.html.erb
+++ b/app/views/layouts/lcms/engine/admin.html.erb
@@ -13,7 +13,7 @@
     <%= csrf_meta_tags %>
     <%# NOTE: JS served via Assets pipeline should be added first %>
     <%= javascript_include_tag 'lcms/engine/admin/application', 'data-turbolinks-track' => 'reload' %>
-    <%= javascript_pack_tag 'admin' %>
+    <%= lcms_engine_javascript_pack_tag 'admin' %>
   </head>
   <body>
     <%= render partial: 'lcms/engine/shared/unsupported' %>
