--- a/app/views/layouts/lcms/engine/admin.html.erb
+++ b/app/views/layouts/lcms/engine/admin.html.erb
@@ -12,7 +12,7 @@
     <%= csrf_meta_tags %>
     <%# NOTE: JS served via Assets pipeline should be added first %>
     <%= javascript_include_tag 'lcms/engine/admin/application', 'data-turbolinks-track' => 'reload' %>
-    <%= javascript_pack_tag 'admin' %>
+    <%= lcms_engine_javascript_pack_tag 'admin' %>
   </head>
   <body>
     <div class="u-page-wrap c-admin u-supported">
