Allows to override Grades inside Lcms::Engine::GradesTo override the GRADES/GRADES_ABBR sets one needs to override the following methods:- `Lcms::Engine::Grades.grades`- `Lcms::Engine::Grades.grades_abbrevs`

--- a/app/views/lcms/engine/admin/batch_reimports/_search_form.html.erb
+++ b/app/views/lcms/engine/admin/batch_reimports/_search_form.html.erb
@@ -17,7 +17,7 @@
                           required: false,
                           as: :select,
                           include_blank: true,
-                          collection: Lcms::Engine::Grades::GRADES,
+                          collection: Lcms::Engine::Grades.grades,
                           label_method: :humanize %>
     </div>
 
