--- a/app/views/lcms/engine/admin/materials/new.html.erb
+++ b/app/views/lcms/engine/admin/materials/new.html.erb
@@ -1,7 +1,7 @@
 <div class="o-page">
   <h2 class="text-center"><%= t('.page_header', type: @material_form.source_type) %></h2>
 
-  <%= simple_form_for @material_form, url: [:admin, :materials] do |f| %>
+  <%= simple_form_for @material_form || MaterialForm.new, url: lcms_engine.admin_materials_path do |f| %>
     <%= f.hidden_field :source_type, value: @material_form.source_type %>
     <%= f.input :link, label: t('ui.url') %>
     <%= f.button :submit, t('.submit') %>
