Possible assets fix

--- a/app/assets/stylesheets/lcms/engine/admin.scss
+++ b/app/assets/stylesheets/lcms/engine/admin.scss
@@ -1,6 +1,6 @@
 @import 'application';
 @import 'selectize';
-@import 'vendors/jquery.tagsinput.css';
+@import 'vendors/jquery.tagsinput';
 @import 'admin/resources';
 @import 'admin/curriculums';
 @import 'admin/standards';
