--- a/app/assets/stylesheets/lcms/engine/application.scss
+++ b/app/assets/stylesheets/lcms/engine/application.scss
@@ -15,7 +15,7 @@
   'font-awesome-sprockets',
   'font-awesome',
   'vendors/foundation_and_overrides',
-  'vendors/mathjax.css';
+  'vendors/mathjax';
 
 @import
   'utils/styles_override',
