Update usage of external decorators (and minor updates)
- Fix bug with `Lcms::Engine::PathHelper#dynamic_path`
- Force install native nokogiri gem with Docker
- Bump mimemagic gem
- Since Rails 6 introduced zeitwerk autoloader we need to review and change the way host application decorates engine's objects.

Consider the host application is named `MyApp`, then to decorate lcms-engine's objects the following should be done.

```ruby
# my_app/app/models/my_app/lcms/engine/user_decorator.rb
module MyApp
  module Lcms
    module Engine
      module UserDecorator
        def self.prepended(base)
          # Any scope or possible class methods
          base.before_validation :some_method
        end

        def some_other_method
          true
        end
      end
    end
  end
end

::Lcms::Engine::User.prepend(MyApp::Lcms::Engine::UserDecorator)
```

--- a/app/views/lcms/engine/admin/materials/index.html.erb
+++ b/app/views/lcms/engine/admin/materials/index.html.erb
@@ -71,7 +71,7 @@
                   <% lesson = ::Lcms::Engine::DocumentGenerator.document_presenter.new lesson %>
                   <li class="u-text--small">
                     <a href="<%= lesson.file_url%>" target="_blank" class="materials-table__lessons--file"><i class="fab fa-google"></i></a>
-                    <%= link_to lesson.title, dynamic_path(lesson, request.query_parameters), target: '_blank' %>
+                    <%= link_to lesson.title, dynamic_path(:material_path, lesson, request.query_parameters), target: '_blank' %>
                   </li>
                 <% end %>
               </ul>
