(#117) Import single document/material via delayed job
Refs #117

Add special checkbox (checked by default) to import document/material using ActiveJob.

--- a/app/views/lcms/engine/admin/materials/new.html.erb
+++ b/app/views/lcms/engine/admin/materials/new.html.erb
@@ -4,6 +4,10 @@
   <%= simple_form_for @material_form, url: [:admin, :materials] do |f| %>
     <%= f.hidden_field :source_type, value: @material_form.source_type %>
     <%= f.input :link, label: t('ui.url') %>
+    <p>
+      <%= f.check_box :async, checked: true %>
+      <span><small><%= t('ui.async') %></small></span>
+    </p>
     <%= f.button :submit, t('.submit') %>
   <% end %>
 </div>
