--- a/app/views/lcms/engine/admin/documents/new.html.erb
+++ b/app/views/lcms/engine/admin/documents/new.html.erb
@@ -2,7 +2,11 @@
   <h2 class=text-center><%= t('.page_title') %></h2>
 
   <%= simple_form_for @document || DocumentForm.new, url: lcms_engine.admin_documents_path do |f| %>
-      <%= f.input :link, error: f.object.errors[:link].first.try(:html_safe), label: t('ui.url') %>
+    <%= f.input :link, error: f.object.errors[:link].first.try(:html_safe), label: t('ui.url') %>
+    <p>
+      <%= f.check_box :async, checked: true %>
+      <span><small><%= t('ui.async') %></small></span>
+    </p>
     <%= f.button :submit, t('.submit') %>
   <% end %>
 </div>
