--- a/app/views/lcms/engine/admin/documents/index.html.erb
+++ b/app/views/lcms/engine/admin/documents/index.html.erb
@@ -40,7 +40,8 @@
       </tr>
 
       <% @documents.each do |lesson| %>
-        <tr id=lesson_<%= lesson.id %>>
+        <% cache lesson do %>
+          <tr id=lesson_<%= lesson.id %>>
           <td><%= check_box_tag 'selected_ids[]', lesson.id, selected_id?(lesson.id), class: 'c-selected-ids' %></td>
           <td class="u-text--right"><%= lesson.id %></td>
           <td><%= Lcms::Engine::Breadcrumbs.new(lesson.resource).short_title if lesson.resource %></td>
@@ -73,6 +74,7 @@
             <%= button_to t('ui.delete'), admin_document_path(lesson), class: 'button small alert', data: { confirm: t('ui.are_you_sure') }, form_class: 'inline', method: :delete %>
           </td>
         </tr>
+        <% end %>
       <% end %>
     </table>
   </div>
