Fix `Reimport/Delete selected` component

--- a/app/views/lcms/engine/admin/materials/import.html.erb
+++ b/app/views/lcms/engine/admin/materials/import.html.erb
@@ -4,7 +4,7 @@
   <h2 class="text-center">Import Materials</h2>
 
   <div class="row">
-    <%= link_to '<- Back', admin_materials_path, class: 'button primary' %>
+    <%= link_to '<- Back', lcms_engine.admin_materials_path, class: 'button primary' %>
   </div>
 
   <%= react_component('admin/ImportStatus', @props) %>
