Optimize Curriculum tree
- Explicitly add `jstree` package
- Explicitly add `foundation-sites` package
- Explicitly add `jquery` package
- Explicitly add `react-tagsinput` package
- Bump CKEditor to 5.1

--- a/app/assets/stylesheets/lcms/engine/lcms_engine_admin.scss
+++ b/app/assets/stylesheets/lcms/engine/lcms_engine_admin.scss
@@ -1,8 +1,7 @@
 // stylelint-disable max-nesting-depth, selector-no-qualifying-type, selector-max-compound-selectors, selector-class-pattern
 
-@import 'application';
+@import 'lcms_engine_application';
 @import 'selectize';
-@import 'vendors/jquery.tagsinput';
 @import 'admin/resources';
 @import 'admin/curriculums';
 @import 'admin/standards';
@@ -10,6 +9,7 @@
 @import 'admin/lessons';
 @import 'admin/materials';
 @import 'admin/users';
+@import 'vendors/react-tagsinput';
 
 .button {
   white-space: nowrap;
