--- a/app/views/layouts/lcms/engine/application.html.erb
+++ b/app/views/layouts/lcms/engine/application.html.erb
@@ -9,8 +9,8 @@
     <%= redirect_meta_tag %>
     <%= render partial: 'lcms/engine/shared/favicon' %>
     <script>document.querySelector('html').className = 'js';</script>
-    <%= stylesheet_link_tag 'lcms/engine/application', media: 'all', 'data-turbolinks-track' => 'reload' %>
-    <%= javascript_include_tag 'lcms/engine/application', 'data-turbolinks-track' => 'reload' %>
+    <%= stylesheet_link_tag 'lcms/engine/lcms_engine_application', media: 'all', 'data-turbolinks-track' => 'reload' %>
+    <%= javascript_include_tag 'lcms/engine/lcms_engine_application', 'data-turbolinks-track' => 'reload' %>
     <%= csrf_meta_tags %>
     <% if content_for?(:canonical_url) %>
       <link rel=canonical href='<%= yield(:canonical_url) %>'>
