--- a/app/views/layouts/lcms/engine/lti.html.erb
+++ b/app/views/layouts/lcms/engine/lti.html.erb
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>document.querySelector('html').className = 'js';</script>
-    <%= stylesheet_link_tag 'lcms/engine/application', media: 'all', 'data-turbolinks-track' => 'reload' %>
+    <%= stylesheet_link_tag 'lcms/engine/lcms_engine_application', media: 'all', 'data-turbolinks-track' => 'reload' %>
     <%= javascript_include_tag '//s7.addthis.com/js/300/addthis_widget.js#async=1' %>
     <%= javascript_include_tag 'lcms/engine/application_lti', 'data-turbolinks-track' => 'reload' %>
     <%= csrf_meta_tags %>
