--- a/app/views/lcms/engine/admin/curriculums/edit.html.erb
+++ b/app/views/lcms/engine/admin/curriculums/edit.html.erb
@@ -1,5 +1,4 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
 
 <% set_page_title 'Curriculum Tree Manager' %>
 
@@ -8,7 +7,10 @@
   <% if @curriculum.present? %>
     <h1 class="text-center">Curriculum Tree</h1>
     <div class="row">
-      <%= react_component('admin/curriculum/CurriculumEditor', @curriculum.editor_props.merge(form_token: form_authenticity_token)) %>
+      <%= react_component('admin/curriculum/CurriculumEditor',
+                          @curriculum.editor_props.merge(
+                            form_token: form_authenticity_token,
+                            path: lcms_engine.children_admin_curriculum_path)) %>
     </div>
   <% end %>
 </div>
