--- a/app/views/lcms/engine/resources/_download.html.erb
+++ b/app/views/lcms/engine/resources/_download.html.erb
@@ -3,7 +3,7 @@
     <span>
       <%= link_to preview_download_path(id: download, slug: resource.slug), class: 'resource-attachment',
         data: { no_turbolink: true }, target: '_blank' do %>
-        <i class="fas fa-eye" aria-hidden="true"></i>
+        <i class="<i class="fa fa-eye" aria-hidden="true"></i>" aria-hidden="true"></i>
       <% end %>
     </span>
   <% end %>
